test/corpus/table.txt
===========
Single Cell
===========
1
---
(table
    (row
        (cell (integer))
    )
)

==============
Multiple Cells
==============
1 | -2 | 3
---
(table
    (row
        (cell (integer))
        (cell (integer))
        (cell (integer))
    )
)

===========
Mixed Cells
===========
1 | 2.0 | 3. | -4.0 | -5.
---
(table
    (row
        (cell (integer))
        (cell (float))
        (cell (float))
        (cell (float))
        (cell (float))
    )
)

=============
Multiple Rows
=============
1 | 2 | 3
4 | 5 | 6
7 | 8 | 9
---
(table
    (row
        (cell (integer))
        (cell (integer))
        (cell (integer))
    )
    (row
        (cell (integer))
        (cell (integer))
        (cell (integer))
    )
    (row
        (cell (integer))
        (cell (integer))
        (cell (integer))
    )
)

==========
Word Table
==========
Heading | Heading2 | Heading Three | Heading 4 | Heading 5.1
---
(table
    (row
        (cell (word))
        (cell (word))
        (cell (word) (word))
        (cell (word) (integer))
        (cell (word) (float))
    )
)

=========================
Trailing Column Separator
=========================
1 |
---
(table
    (row
        (cell (integer))
    )
)

===================================
Multi-Row Trailing Column Separator
===================================
1 | 2
1 |
---
(table
    (row
        (cell (integer))
        (cell (integer))
    )
    (row
        (cell (integer))
    )
)

===============
Horizontal Rule
===============
Key | Value
-
1 | 2
--
3 |
 -
| 4
---
(table
    (row
        (cell (word))
        (cell (word))
    )
    (horizontal_rule)
    (row
        (cell (integer))
        (cell (integer))
    )
    (horizontal_rule)
    (row
        (cell (integer))
    )
    (horizontal_rule)
    (row
        (cell (integer))
    )
)

==================
Single letter word
==================
A Heading
---
(table
    (row
        (cell (word) (word))
    )
)
